--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: iosif-dev
-    ports:
-      - "3000:3000"
+    expose:
+      - 3000
     environment:
       - NODE_ENV=production
       - NEXT_TELEMETRY_DISABLED=1
